--- a/pms/views/product_pricelist_item_views.xml
+++ b/pms/views/product_pricelist_item_views.xml
@@ -4,6 +4,16 @@
         <field name="model">product.pricelist.item</field>
         <field name="inherit_id" ref="product.product_pricelist_item_form_view" />
         <field name="arch" type="xml">
+            <xpath expr="//field[@name='applied_on']" position="before">
+                <field name="on_board_service" />
+                <field name="allowed_property_ids" invisible="1" />
+                <field
+                    name="board_service_room_type_ids"
+                    widget="many2many_tags"
+                    options="{'no_create': True,'no_open': True}"
+                    attrs="{'invisible': [('on_board_service','=',False)]}"
+                />
+            </xpath>
             <xpath expr="//field[@name='min_quantity']" position="before">
                 <field
                     name="pms_property_ids"
