[WIP] action: send mail after x min create reservation

--- a/pms/views/pms_automated_mails_views.xml
+++ b/pms/views/pms_automated_mails_views.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <record model="ir.ui.view" id="pms_automated_mails_view">
         <field name="name">pms.automated_mails_view_form</field>
@@ -7,22 +7,30 @@
             <form string="Automated Mails" class="pt-1">
                  <sheet>
                     <div class="col-5">
-                        <label for="name"/>
+                        <label for="name" />
                         <group>
-                            <h2><field name="name"/></h2>
+                            <h2><field name="name" /></h2>
                         </group>
                     </div>
                     <div class="row">
                         <div class="col-5">
                             <group>
-                                <field name="template_id"/>
-                                <field name="reservation_date_fields_id"/>
+                                <field name="active" widget="boolean_toggle" />
+                                <field name="template_id" />
+                                <field name="action" />
                             </group>
                         </div>
                         <div class="col-5">
                             <group>
-                                <field name="time"/>
-                                <field name="time_type"/>
+                                <field name="moment" />
+                                <field
+                                    name="time"
+                                    attrs="{'invisible':[('moment','=','in_act')]}"
+                                />
+                                <field
+                                    name="time_type"
+                                    attrs="{'invisible':[('moment','=','in_act')]}"
+                                />
                             </group>
                         </div>
                     </div>
@@ -35,17 +43,17 @@
             <field name="model">pms.automated.mails</field>
             <field name="arch" type="xml">
                 <tree string="Automated Mails">
-                    <field name="name"/>
-                    <field name="time"/>
-                    <field name="time_type"/>
-                    <field name="template_id"/>
+                    <field name="name" />
+                    <field name="time" />
+                    <field name="time_type" />
+                    <field name="template_id" />
                 </tree>
             </field>
         </record>
     <record model="ir.actions.act_window" id="open_pms_automated_mails_tree">
         <field name="name">Automated Mails</field>
         <field name="res_model">pms.automated.mails</field>
-        <field name="view_id" ref="view_automated_mails_tree"/>
+        <field name="view_id" ref="view_automated_mails_tree" />
         <field name="view_mode">tree,form</field>
     </record>
     <menuitem
