[WIP]added creation of auto actions when actions are: write reservation, cancel reservation, checkin and checkout

--- a/pms/views/pms_automated_mails_views.xml
+++ b/pms/views/pms_automated_mails_views.xml
@@ -44,8 +44,7 @@
             <field name="arch" type="xml">
                 <tree string="Automated Mails">
                     <field name="name" />
-                    <field name="time" />
-                    <field name="time_type" />
+                    <field name="action" />
                     <field name="template_id" />
                 </tree>
             </field>
